atualização ativ01 bio

--- a/atividad01/index.html
+++ b/atividad01/index.html
@@ -12,11 +12,11 @@
     <h1>Minhas Redes Sociais</h1>
     <h2>Quem sou eu?</h2>
     <img src="foto branca 150x.png" alt="foto de perfil"> <!-- Imagem do perfil-->
-    <p>Meu nome é Steven Anderson, sou Desenvolvedor de softwares e sites desde 2020, produzo conteudo na twitch relacionado a back-end e front-end para pessoas iniciantes na programação. </p>
+    <p>Meu nome é Steven Anderson, sou estudante de Engenharia da Computação no Instituto Federal Fluminense, e estudo Desenvolvimento Full-Stack </p>
     <h2>Como falar comigo?</h2>
     <ul>
         <li><img src="icone-github.png" alt="github" <p> <a href="https://www.github.com/sttve" target="_blank" rel="external"> /sttve </a> - alguns projetos no meu GitHub. </p></li>
-        <li><img src="icone-linkedin.png" alt="linkedin" <p> <a href="https://www.linkedin.com/in/steven-anderson-alvarenga-ba5134215/" target="_blank" rel="external"> /linkedin </a> - me adicione no Linkedin. </p></li>
+        <li><img src="icone-linkedin.png" alt="linkedin" <p> <a href="https://www.linkedin.com/in/sttveandersona/" target="_blank" rel="external"> /linkedin </a> - me adicione no Linkedin. </p></li>
         <li><img src="icone-instagram.png" alt="instagram" <p> <a href="https://www.instagram.com/seikesofei" target="_blank" rel="external"> /seikesofei </a> - me siga no Instagram. </p></li>
         <li><img src="icone-twitter.png" alt="twitter" <p> <a href="https://www.twitter.com/st_tve" target="_blank" rel="external"> /st_tve </a> - deixa o follow no twitter! </p></li>
     </ul>
