segunda att bio

--- a/atividad01/index.html
+++ b/atividad01/index.html
@@ -12,7 +12,7 @@
     <h1>Minhas Redes Sociais</h1>
     <h2>Quem sou eu?</h2>
     <img src="foto branca 150x.png" alt="foto de perfil"> <!-- Imagem do perfil-->
-    <p>Meu nome é Steven Anderson, sou estudante de Engenharia da Computação no Instituto Federal Fluminense, e estudo Desenvolvimento Full-Stack </p>
+    <p>Meu nome é Steven Anderson, sou estudante de Engenharia da Computação no Instituto Federal Fluminense,<br/> e atualmente estudo Desenvolvimento Full-Stack por aproximadamente 2 anos. Utilizo as tecnologias como React principalmente, Java/TypeScript, HTML E CSS. Express, Node & API's </p>
     <h2>Como falar comigo?</h2>
     <ul>
         <li><img src="icone-github.png" alt="github" <p> <a href="https://www.github.com/sttve" target="_blank" rel="external"> /sttve </a> - alguns projetos no meu GitHub. </p></li>
